tests/test_files_pa3/external/errors/ComplexScopeError2.ic
//semantic error at line 12: Illegal local var init type (Type check)

class A {

     static void main(string[] args){}
     
     void complexScope() {
            
           
            
           {
                int a = a;
           }
           
           int a;

     }
     
     boolean a;
    
}